# project-WasteSemSeg

./: .gitignore  bisenet.py  bisenet_v2.py  config.py  dataset.zip:Zone.Identifier  icnet.py  loss.py  model.py  pyproject.toml  requirements.txt  resortit.py  score.py  train.ipynb  train.py  train2.py  train:Zone.Identifier  train_original.py  utils.py
base/: DeepSMOTE_SORTIT.py  __init__.py  base_deepsmote.py  base_modules.py  resortit_deepsmote.py  xception.py  xception_v2.py
dataset/labels/: ._v2fullData4clVal.json
