[tool.poetry]
name = "project-wastesemseg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_wastesemseg"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorboardx = "^2.6"
requests = "^2.30.0"
easydict = "^1.10"
matplotlib = "^3.7.1"
ipykernel = "^6.23.0"
ipython = "^8.13.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
